app/static/css/main.css
/* ... */
.hright {
  text-align: right;
}

.vcenter {
  padding-top: 40vh;
}

.aitems {
  align-items: center;
}

nav {
  padding-left: 20px;
  padding-right: 20px;
}

aside nav li {
  padding-bottom: 15px;
}
aside nav li:hover {
  background-color: var(--card-background-color);
}
aside nav small {
  font-size: 15px;
  color: var(--secondary);
  opacity: 0.5;
}

#messages {
  text-align: center;
}
#messages ul li {
  color: var(--primary) !important;
  list-style: none;
  font-size: 50px;
}

#account #userinfo, #account #accountmain {
  margin-bottom: 0px;
  border-radius: 0;
}
#account #userinfo {
  margin-top: 0px;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: var(--code-background-color);
}
#account #userinfo .grid {
  align-items: center !important;
}
#account #userinfo .pfp img {
  width: 50px;
  height: 50px;
  border-radius: 50%;
}
#account #hflink article header {
  margin-bottom: 10px;
}
#account .logout li {
  list-style: none;
  text-align: right;
}
#account .logout li a {
  text-decoration: none;
}
#account .logout li a:hover {
  background: var(--code-background-color);
}
#account h1, #account h3 {
  margin-bottom: 0px;
}
#account .basic {
  border: 2px solid var(--primary);
  padding: 0px;
}
#account .basic p {
  margin-bottom: 0px;
}
#account .basic .small {
  border-bottom: 1px solid var(--secondary);
}
#account .basic .small small {
  font-size: 12px;
}
#account .basic .grid {
  align-items: center;
}
#account .basic .pricing {
  padding: 2rem;
}
#account .basic .description {
  padding: 2rem;
  margin-right: -50px;
}
#account .basic .features {
  padding: 2rem;
  border-left: 1px solid var(--secondary);
  border-right: 1px solid var(--secondary);
}
#account .pricehighlight {
  color: var(--primary);
  font-size: 50px;
}
#account .subbanner {
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
  margin-bottom: 0px;
}
#account .subbanner p {
  margin: 0px;
}
#account article.noti {
  margin: 0px !important;
  padding: 20px;
  color: var(--primary);
  margin-bottom: 20px;
}
#account article.noti:hover {
  color: var(--primary-hover);
}
#account .email {
  align-items: center;
}
#account .accountsettings header {
  margin-bottom: 20px;
}

.optionbuttons button {
  margin-bottom: 5px;
}

/*# sourceMappingURL=main.css.map */

